# ReceiptTracker

./: README.md  pyproject.toml  setup.sh
client/: package-lock.json  package.json
